--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.5.0",
+        "sweetalert2": "^11.10.3",
         "vue": "^3.2.36",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.2.5"
