--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.4",
+        "maatwebsite/excel": "^3.1",
+        "spatie/laravel-permission": "^6.3",
         "yajra/laravel-datatables": "^9.0"
     },
     "require-dev": {
