--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.5.0",
+        "chart.js": "^4.4.2",
         "sweetalert2": "^11.10.3",
         "vue": "^3.2.36",
         "vue-loader": "^17.3.1",
